helm/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: speech-service
  name: speech-service
  namespace: speech-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: speech-service
  type: ClusterIP
